# MedBench-DataPrep

./: .gitignore  .lintr  DataPrep.Rproj  First_MedBench_paper.Rmd  README.md  Second_Medbench_paper.Rmd  build_processed_output.R  download_platform_charts.py  download_platform_review_campaign.py  evaluate_bleu_rouge.py  merge_raw_data_into_json.R  merge_raw_data_into_markdown.R  platform_graphql.py  pyproject.toml
helpers/: convert2markdown_list.R  extend_with_platform_JSON.R  find_invalid_case_data.R  getFileTibble.R  lab2tibble.R  medications2tibble.R  merge_and_format_data.R  merge_into_single_markdown.R  readSummaries.R  word2tibble.R
python_helpers/: __init__.py  pdqi.py  platform_graphql.py  review_campaign_csv.py  review_campaign_export.py  review_campaign_queries.py  text_metrics.py
