[tool.poetry]
name = "dataprep"
version = "0.1.0"
description = ""
authors = ["Max Gordon <max@gforge.se>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sacrebleu = "^2.4.3"
py-rouge = "^1.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
